--- a/styles/styles.css
+++ b/styles/styles.css
@@ -676,6 +676,7 @@ body {
 
 .hotels__list {
   list-style-type: none;
+
 }
 
 .hotels__infrastructure-item {
@@ -697,27 +698,64 @@ body {
 
 }
 
+.hotels__list {
+  display: grid;
+  grid-template-rows: 123px 123px 123px 123px;
+  row-gap: 52px;
+  margin: 0 0 30px 0;
+  padding: 0;
+
+}
+
+.hotels__card {
+  display: grid;
+  grid-template-rows: 31px auto 37px;
+  grid-template-columns: 180px 46px 151px 8px 160px 361px 160px;
+
+}
+
+.hotels__card .hotels__card-link {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+}
+
+.hotels__card .hotels__title-link {
+  grid-column: 3 / 6;
+  grid-row: 1 / 2;
+
+}
+
 .hotels__card-title {
   font-family: "PT Sans", sans-serif;
   font-size: 24px;
   line-height: 31px;
   font-weight: 700;
+  padding: 0;
+  margin: 0;
 }
 
-.hotels__card-type {
+.hotels__card .hotels__card-type {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 23px;
   font-weight: 400;
   color: #333333;
+  padding: 0;
+  margin: 0;
+  grid-row: 2 / 3;
+  grid-column: 3 / 5;
 }
 
-.hotels__card-price {
+.hotels__card .hotels__card-price {
   font-family: "PT Sans", sans-serif;
   font-size: 18px;
   line-height: 23px;
   font-weight: 400;
   color: #333333;
+  padding: 0;
+  margin: 0;
+  grid-row: 2 / 3;
+  grid-column: 5 / 6;
 }
 
 .hotels__rating {
@@ -727,6 +765,8 @@ body {
   font-weight: 400;
   color: #333333;
   text-transform: uppercase;
+  grid-row: 3 / 4;
+  grid-column: 7 / 8;
 }
 
 
@@ -825,14 +865,14 @@ body {
   background-color: #756257;
   text-decoration: none;
   width: 575px;
-  margin-left: 312px;
+  margin: 0 auto;
   padding-top: 13px;
   padding-bottom: 17px;
   border-radius: 10px;
 
 }
 
-.hotels__card-buttom {
+.hotels__card-button {
   font-family: "PT Sans", sans-serif;
   font-size: 16px;
   line-height: 21px;
@@ -842,6 +882,12 @@ body {
   text-transform: uppercase;
   background-color: #756257;
   text-decoration: none;
+  grid-row: 3 / 4;
+  grid-column: 3 / 4;
+  margin: 0;
+  padding-top: 9px;
+  border-radius: 4px;
+
 }
 
 .hotels__favorite {
@@ -854,6 +900,9 @@ body {
   text-transform: uppercase;
   background-color: #83B3D3;
   border: 0;
+  grid-row: 3 / 4;
+  grid-column: 5 / 6;
+  border-radius: 4px;
 }
 
 .hotels__favorite-active {
@@ -866,6 +915,9 @@ body {
   text-transform: uppercase;
   background-color: #7DB54F;
   border: 0;
+  grid-row: 3 / 4;
+  grid-column: 5 / 6;
+  border-radius: 4px;
 }
 
 
@@ -876,8 +928,11 @@ body {
   font-size: 16px;
   line-height: 21px;
   font-weight: 400;
+  text-align: center;
   background-color: #F2F2F2;
   color: #333333;
+  padding-top: 9px;
+  border-radius: 4px;
 
 }
 
@@ -888,6 +943,8 @@ body {
   font-weight: 700;
   text-decoration: none;
   color: #000000;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
 }
 
 .hotels__search {
